add attachments dir and mv resume.pdf

--- a/modules/ROOT/pages/resume.adoc
+++ b/modules/ROOT/pages/resume.adoc
@@ -1,10 +1,8 @@
 = Resume
 
 ifeval::["{backend}" == "html5"]
-link:resume.pdf[Download PDF]
+xref:attachment$resume.pdf[Download PDF]
 endif::[]
-
-link:resume.pdf[Download PDF]
 
 == Job 1
 
