--- a/modules/ROOT/pages/docs-as-code.adoc
+++ b/modules/ROOT/pages/docs-as-code.adoc
@@ -1,10 +1,12 @@
 = Docs-as-code
 
-Modern tech writing practices should mimic software development processes and tooling, when appropriate. This approach leads to more scalable, collaborative documentation.
+Modern tech writing has evolved to treat documentation like code in how it's versioned, reviewed, tested, and deployed. Though I began my career managing docs in lengthy Microsoft Word documents that chugged and froze on a daily basis, I quickly learned that delivering high quality documentation at scale meant having high quality tooling and processes. 
+
+There's no need to reinvent the wheel, though. Treat the docs like code! 
 
 == Git
 
-Whether working alone or on a team, proper version control is a must. 
+Whether working alone or on a team, proper version control is a must.
 
 === Feature branching
 
@@ -48,13 +50,38 @@ Clarity is better than cleverness
 
 Prior to merging, docs are xref:#_testability[tested] and xref:#_peer_review[peer reviewed] as part of a Pull Request (SME review should already be completed before opening PR). Depending on the DevOps setup for docs, a [branch]`feature` or [branch]`dev` branch can be deployed to a staging environment and shared with internal shareholders prior to the release.
 
-== Modularity
+== Content reuse
 
-topic typing (steal from old overview page), content reuse, snippets or include directives
+Tech writers can benefit from the concept of modular programming, where code is separated depending on the purpose it serves, so it can be reused whenever that purpose is needed. For documentation, why write something three or four times when you can write it once? While I don't advocate for the rigidity of the DITA specification (modularity can be a double-edged sword), I appreciate how content reuse strategies encourages you to write more flexibly, efficiently, and with a clear scope in mind.
 
-=== Topic typing
+Content reuse goes by different names depending on the software I'm in, but the concept remains the same throughout. 
 
-Whether I’m writing XHTML in MadCap Flare or AsciiDoc in a static site generator like Hugo, topic typing is a priority in my information architecture. Even when not validating against the DITA specification, I mimic the following topic types and create templates for consistency, modularity, and increased content reuse:
+=== Examples depending on software
+
+In *MadCap Flare*, I can use a snippet to remind users where they can view their own user permissions. This is helpful when certain permissions are listed as a prerequisite for a task.
+
+[source,xml]
+----
+<MadCap:snippetBlock src="../Resources/Snippets/User/ViewPermissions.flsnp" />
+----
+
+In *Hugo*, I can create a custom shortcode that holds a feature's "short description" to use both in feature docs and as a release notes blurb.
+
+[source,markdown]
+----
+{{% feature-xyz-short-desc %}}
+----
+
+When writing with AsciiDoc in *Antora*, I can use the `::include` directive to display source code from a file.
+
+[source,asciidoc]
+----
+include::example$feature-xyz.php[]
+----
+
+=== TODO...Topic typing
+
+I mimic the following topic types and create templates for consistency, modularity, and increased content reuse:
 
 * **Concept:** choose this topic type when introducing a concept, such as a new feature overview.
 * **Task:** choose this topic type when instructing user action, such as enabling notifications within a product.
