--- a/modules/ROOT/pages/docs-as-code.adoc
+++ b/modules/ROOT/pages/docs-as-code.adoc
@@ -75,9 +75,9 @@ In *Hugo*, I can create a custom shortcode that holds a feature's "short descrip
 When writing with AsciiDoc in *Antora*, I can use the `::include` directive to display source code from a file.
 
 [source,asciidoc]
-++++
-include::example$feature-xyz.php[]
-++++
+----
+include::feature-xyz.php[]
+----
 
 === TODO...Topic typing
 
