escape include directive

--- a/modules/ROOT/pages/docs-as-code.adoc
+++ b/modules/ROOT/pages/docs-as-code.adoc
@@ -76,7 +76,7 @@ When writing with AsciiDoc in *Antora*, I can use the `::include` directive to d
 
 [source,asciidoc]
 ----
-include::feature-xyz.php[]
+\include::feature-xyz.php[]
 ----
 
 === TODO...Topic typing
