--- a/modules/ROOT/pages/docs-as-code.adoc
+++ b/modules/ROOT/pages/docs-as-code.adoc
@@ -2,7 +2,7 @@
 
 Modern tech writing has evolved to treat documentation like code in how it's versioned, reviewed, tested, and deployed. Though I began my career managing docs in lengthy Microsoft Word documents that chugged and froze on a daily basis, I quickly learned that delivering high quality documentation at scale meant having high quality tooling and processes. 
 
-There's no need to reinvent the wheel, though. Treat the docs like code! 
+Fortunately, there's no need to reinvent the wheel. Treat the docs like code! 
 
 == Git
 
@@ -52,13 +52,13 @@ Prior to merging, docs are xref:#_testability[tested] and xref:#_peer_review[pee
 
 == Content reuse
 
-Tech writers can benefit from the concept of modular programming, where code is separated depending on the purpose it serves, so it can be reused whenever that purpose is needed. For documentation, why write something three or four times when you can write it once? While I don't advocate for the rigidity of the DITA specification (modularity can be a double-edged sword), I appreciate how content reuse strategies encourages you to write more flexibly, efficiently, and with a clear scope in mind.
+Tech writers can benefit from the coding concept of modular programming, where code is separated depending on the purpose it serves. Then, because segments of code exist independently, they are reused whenever a particular purpose is needed. For documentation, why write something three or four times when you can write it once and reuse it? Doing so creates consistenty for readers and makes docs easier to manage. While I don't advocate for the rigidity of the DITA specification (modularity can be a double-edged sword), I appreciate how content reuse strategies encourage you to write more flexibly, efficiently, and with a clear scope in mind.
 
-Content reuse goes by different names depending on the software I'm in, but the concept remains the same throughout. 
+Content reuse goes by different names depending on the software I'm using, but the concept remains the same throughout. Here are a few examples from my professional experience. 
 
 === Examples depending on software
 
-In *MadCap Flare*, I can use a snippet to remind users where they can view their own user permissions. This is helpful when certain permissions are listed as a prerequisite for a task.
+In *MadCap Flare*, I can use a snippet to remind users where they can view their own user permissions. This is helpful when certain permissions are listed as a prerequisite for a task. If this location changes, for example, I only need to update the snippet.
 
 [source,xml]
 ----
@@ -72,11 +72,11 @@ In *Hugo*, I can create a custom shortcode that holds a feature's "short descrip
 {{% feature-xyz-short-desc %}}
 ----
 
-When writing with AsciiDoc in *Antora*, I can use the `include::` directive to display source code from a file.
+When writing with AsciiDoc in *Antora*, I can use the `include::` directive to display source code from a file, rathre than copying and pasting it on the page. If I want to reuse this example elsewhere and the example code is updated, all reference to it update automatically.
 
 [source,asciidoc]
 ----
-\include::feature-xyz.php[]
+\include::example$feature-xyz.php[]
 ----
 
 === Topic typing
