--- a/modules/ROOT/pages/docs-as-code.adoc
+++ b/modules/ROOT/pages/docs-as-code.adoc
@@ -106,7 +106,9 @@ Structuring content for reuse is easier to do from the start but not _everything
 
 == Reviews 
 
-audience, reviews (SME and peer)
+Docs are best when they're collaborative. And the most fruitful collaboration often takes the form of reviews.
+
+Tech writers usually aren't the expert on the subject they're writing--for this, there's xref:#_subject_matter_expert_sme_review[Subject Matter Expert (SME) review]. And authors usually aren't the best editors of their own work--for this, there's xref:#_peer_review[peer review].
 
 plain text via GitHub PRs or as Word docs in SharePoint with track changes on.
 
@@ -117,12 +119,12 @@ The tightest feedback loop should be between a SME and technical writer. This re
 Once the SME review is complete, other tech writers can evaluate the documentation for style guide adherence, proper information architecture, consistency in tone, grammar, and usage. This review should be completed as part of a GitHub Pull Request.
 
 === Feature review
-Once a feature is nearing _feature complete_ status, a final review considering the opinion of key stakeholders (Product Management, Engineering, Professional Services, Support) should occur. This review will take into account higher-level feedback from a wider audience and serve as a jumping off point for training.
+Once a feature is nearing **feature complete** status, a final review considering the opinion of key stakeholders (Product Management, Engineering, Professional Services, Support) should occur. This review will take into account higher-level feedback from a wider audience and serve as a jumping off point for training.
 
 == Testability
 
-Validating against style guides and readability. On a team, peer review from other tech writers has the advantage of unfamiliar eyes. This is true for editing as well as "testing" the documentation with someone who's unfamiliar with the content. Sometimes a paragraph makes sense to someone if they already understand the content. This is often not the position of the audience reading user documentation. Distance like this helps actually helps tech writers do their jobs more effectively.
+The author can test at any time, but it's also a good idea to test again during peer review. Validating against style guides and readability. On a team, peer review from other tech writers has the advantage of unfamiliar eyes. This is true for editing as well as "testing" the documentation with someone who's unfamiliar with the content. Sometimes a paragraph makes sense to someone if they already understand the content. This is often not the position of the audience reading user documentation. Distance like this helps actually helps tech writers do their jobs more effectively.
 
 Test against acceptance criteria (these need to be clear, have audience in mind, etc.). Give good and bad example of AC. 
 
-vale (style guides and readability metrics)
+vale (style guides and readability metrics) - is a rule unwarranted? add it to the exceptions list or remove it (does this get overwritten again by `vale sync`?).
