--- a/modules/ROOT/pages/docs-as-code.adoc
+++ b/modules/ROOT/pages/docs-as-code.adoc
@@ -125,20 +125,23 @@ Once a feature is nearing **feature complete** status, a final review considerin
 
 Validating documentation to a standard doesn't need to be purely subjective. Language might not follow as strict of conventions as code, but I like to test my docs with Vale for style guide adherence and readability metrics. Style guide linting in Vale can be adjusted or extended to reflect your organization's preferences, as well. 
 
-NOTE: Running [command] the `vale sync` command will re-download any removed rules from your list of packages.
+NOTE: Running the `vale sync` command will re-download any removed rules from your list of packages.
 
 === Acceptance criteria
 
 Another test of documentation is to verify the writing against the ticket's acceptance criteria. This calls for clear, demonstrative acceptance criteria that can pass or fail such a test. Here's a couple of examples to show what I mean: 
 
-.Bad example of acceptance criteria
+.Bad acceptance criteria
 [example]
-Document feature xyz.
+* "Document feature xyz"
 
-.Good example of acceptance criteria
+.Good acceptance criteria
 [example]
-todo...
+Documentation covering the following use-cases:
+* [task] fresh install workflow for new users
+* [task] upgrade workflow for existing users (US)
+* [task] upgrade workflow for existing users (UK) 
 
 === Reviews
 
-xref:#_subject_matter_expert_sme_review[SME] and xref:#_peer_review[peer] reviews serve as the catch-all test for what escapes linters and acceptance criteria. This is the arena for "_I think this is confusing_" or "_I would word this differently_" type of feedback. We're humans after all, writing documentation for other humans, so it should pass these subjective criteria, too. Synthesizing murky (and sometimes conflicing) feedback into consistent and predictable documentation is yet another challenege for tech writers to take on.
+xref:#_subject_matter_expert_sme_review[SME] and xref:#_peer_review[peer] reviews serve as the catch-all test for what escapes linters and acceptance criteria. This is the arena for "I think this paragraph is confusing" or "I would word this differently" type of feedback. We're humans after all, writing documentation for other humans, so it should pass these subjective criteria, too. Effective tech writers must develop the ability to synthesize murky (and sometimes conflicing) feedback into clear documentation.
