--- a/modules/ROOT/pages/docs-as-code.adoc
+++ b/modules/ROOT/pages/docs-as-code.adoc
@@ -125,6 +125,13 @@ Once a feature is nearing **feature complete** status, a final review considerin
 
 Validating documentation to a standard doesn't need to be purely subjective. Language might not follow as strict of conventions as code, but I like to test my docs with Vale for style guide adherence and readability metrics. Style guide linting in Vale can be adjusted or extended to reflect your organization's preferences, as well. 
 
+.Updates I've made to Vale in this project
+====
+* removed all Readability tests other than `Readability.FleschKincaid` and `Readability.FleschReadingEase` since I prefer focusing on syllable count
+* removed `Google.FirstPerson.yml` rule since first-person is okay in my portfolio
+* added custom vocab list at `styles/Vocab/portfolio` with `accept.txt` file for spelling exceptions
+====
+
 NOTE: Running the `vale sync` command will re-download any removed rules from your list of packages.
 
 === Acceptance criteria
