vale updates on docs-as-code

--- a/modules/ROOT/pages/vale.adoc
+++ b/modules/ROOT/pages/vale.adoc
@@ -1,3 +1,3 @@
 = Vale
 
-todo...
+adjusted FirstPerson.yml, FleschKincaid to grade level 9 since portfolio's are jargon-heavy and often an area where you have to pack in too much info in too little space...
