--- a/modules/ROOT/pages/docs-as-code.adoc
+++ b/modules/ROOT/pages/docs-as-code.adoc
@@ -1,6 +1,6 @@
 = Docs-as-code
 
-Modern tech writing has evolved to treat documentation like code in how it's versioned, reviewed, tested, and deployed. Though I began my career managing docs in lengthy Microsoft Word documents that chugged and froze on a daily basis, I quickly learned that delivering high quality documentation at scale meant having high quality tooling and processes. 
+Modern tech writing has evolved to treat documentation like code in how it's versioned, reviewed, tested, and deployed. While I began my career watching Microsoft Word struggle with 500+ page documents, I've learned first-hand that delivering high quality documentation at scale means having high quality tools and processes.
 
 Fortunately, there's no need to reinvent the wheel. Treat the docs like code! 
 
@@ -10,12 +10,12 @@ Whether working alone or on a team, proper version control is a must.
 
 === Feature branching
 
-As a general rule, [branch]`master` branch should always contain production-ready code. This means that documentation for an upcoming release gets worked in feature branches that are typically scoped at the xref:agile.adoc[Epic or Feature level]. Ideally, tickets within these Epics or Features are worked on their own branch and merged into the respective feature branch once complete.
+As a general rule, [branch]`main` branch always contains production-ready code. This way, you can quickly release new docs without worry of it containing unfinished work or errors that'll break your site. Feature branches off of [branch]`main` contain in-progress work for upcoming releases. I prefer to scope these feature branches at the xref:agile.adoc[Epic or Feature level] and merge completed feature docs into them. How you structure your tickets informs how you structure your branches.
 
 .Feature branching (simple) 
 image::feature-branching-simple.png[Feature branches without release branch]
 
-Branching in this way is more straight-forward the more "agile" a company's release cadence is. In other words, if a company releases a feature once it's complete, the feature branch containing the docs is simply merged to [branch]`main` come release time. However, if a company prefers a longer release runway (_cough_ waterfall! _cough_), I'll create a release branch off [branch]`main` to merge completed feature branches into. 
+Branching in this way is more straight-forward the more "agile" a company's release schedule is. In other words, if a company releases a feature once it's complete, the feature branch containing the docs is simply merged to [branch]`main` come release time. However, if a company prefers a longer release runway (_cough_ waterfall! _cough_), I'll create a release branch off [branch]`main` to merge completed feature branches into. 
 
 .Feature branching with a release branch
 image::feature-branching-release.png[Feature branches with release branch]
@@ -27,7 +27,7 @@ image::feature-branching-release-hotfix.png[Feature branches with release and ho
 
 === Naming conventions
 
-I prefer to name branches using ticket IDs, for example [branch]`feature/jira-123`, as descriptive names can become confusing, vague, or even inaccurate as development evolves. The associated ticket ID serves as a breadcrumb to the source of truth, in this case a Jira ticket, that contains the most up-to-date information about the feature.
+I prefer to name branches using ticket IDs, for example [branch]`feature/jira-123`. Descriptive names can become confusing, vague, or even inaccurate as development evolves. The associated ticket ID serves as a breadcrumb to the source of truth, in this case a Jira ticket. This ticket contains the most up-to-date information about the feature and is a more appropriate place for details than a branch name.
 
 [source,bash]
 ----
@@ -41,38 +41,40 @@ release/v1.1.0
 hotfix/v1.0.4
 ----
 
-This isn't the most alluring naming convention, I'll admit. What is lost in presentation is gained in clarity, in my experience. And sometimes:
+This isn't the most alluring naming convention, but sometimes:
 
 [quote,Unix Philosophy]
 Clarity is better than cleverness
 
 === Pull requests
 
-Prior to merging, docs are xref:#_testability[tested] and xref:#_peer_review[peer reviewed] as part of a Pull Request (SME review should already be completed before opening PR). Depending on the DevOps setup for docs, a [branch]`feature` or [branch]`dev` branch can be deployed to a staging environment and shared with internal shareholders prior to the release.
+Before merging, I like to xref:#_testability[test] and xref:#_peer_review[peer reviewed] my docs as part of a Pull Request. If possible, I'll deploy a [branch]`feature` or [branch]`dev` branch to a staging environment and share with internal shareholders before the release.
 
 == Content reuse
 
-Tech writers can benefit from the coding concept of modular programming, where code is separated depending on the purpose it serves. Then, because segments of code exist independently, they are reused whenever a particular purpose is needed. For documentation, why write something three or four times when you can write it once and reuse it? Doing so creates consistency for readers and makes docs easier to manage. While I don't advocate for the rigidity of the DITA specification (modularity can be a double-edged sword), I appreciate how content reuse strategies encourage you to write more flexibly, efficiently, and with a clear scope in mind.
+Docs-as-code encourages tech writers to borrow from the coding concept of **modular programming**. This term describes how programmers separate code into independent files depending on the purpose it serves. This approach leads to less manual work and makes managing code must easier. Why write something three or four times when you can write it once and reuse it? This is transferrable to docs, of course. 
 
-Content reuse goes by different names depending on the software I'm using, but the concept remains the same throughout. Here are a few examples from my professional experience. 
+Writing docs that are more flexible and narrowly scoped may take some initial planning, but the approach is ultimately more efficient, not to mention less of a headache to manage. Proper content reuse also creates consistency for readers, making the docs easier to read. 
+
+Content reuse goes by different names depending on the software I'm using, but the concept remains the same. Here are a few examples. 
 
 === Examples depending on software
 
-In *MadCap Flare*, I can use a snippet to remind users where they can view their own user permissions. This is helpful when certain permissions are listed as a prerequisite for a task. If this location changes, for example, I only need to update the snippet.
+In *MadCap Flare*, I can use a snippet to remind users where to view their user permissions, for example. This is helpful when a task requires a specific permission. If the path to this location changes or I want to update wording in this blurb, I only need to update the snippet once.
 
 [source,xml]
 ----
-<MadCap:snippetBlock src="../Resources/Snippets/User/ViewPermissions.flsnp" />
+<MadCap:snippetBlock src="../Resources/Snippets/user/view-permissions.flsnp" />
 ----
 
-In *Hugo*, I can create a custom shortcode that holds a feature's "short description" to use both in feature docs and as a release notes blurb.
+In *Hugo*, I can create a custom shortcode that contains a helpful short description for a feature. I'll then reuse this shortcode in feature docs and as a release notes introduction.
 
 [source,markdown]
 ----
 {{% feature-xyz-short-desc %}}
 ----
 
-When writing with AsciiDoc in *Antora*, I can use the `include::` directive to display source code from a file, rather than copying and pasting it on the page. If I want to reuse this example elsewhere and the example code is updated, all reference to it update automatically.
+When writing with AsciiDoc in *Antora*, I can use the `include::` directive to display source code from a file. This is preferable to copying and pasting it on different pages because, if this source code example changes, I only need to update the example once.
 
 [source,asciidoc]
 ----
@@ -81,13 +83,13 @@ When writing with AsciiDoc in *Antora*, I can use the `include::` directive to d
 
 === Topic typing
 
-Another valuable content reuse technique is topic typing. At it's most general, this can mean organizing content into three basic categories: **concept**, **task**, or **reference**. 
+Another valuable content reuse technique is topic typing. At it's most general, I prefer to organize content into three basic categories: **concept**, **task**, or **reference**. 
 
 * **Concept:** used when introducing or explaining an idea, like the overview of a complex feature.
 * **Task:** used when instructing user action, like enabling a feature within a product.
 * **Reference:** used when providing a large amount of scannable information, like tabular data about compatibility.
 
-Dedicating a page to a specific content type might be enough modularity for you. If desired, you can take topic typing further and make each piece of content within a page more modular. For example:
+Dedicating a page to a specific topic type is enough modularity sometimes. For increased reuse potential, I can make each piece of content within a page more modular, if desired. For example:
 
 [source,asciidoc]
 ----
@@ -100,9 +102,9 @@ include::concept-y.adoc
 include::concept-z.adoc
 ----
 
-Regardless of how granular you go, decide what's included in each topic and implement a template for each to display information consistently. This consistency makes content reuse easier, as the purpose of each section is narrowly scoped, so you can plug-and-play content as needed.
+Regardless of how modular I go, I make sure I'm consistent in how I template these files. This consistency enables me to plug-and-play content as needed.
 
-Structuring content for reuse is easier to do from the start but not _everything_ needs to be reused. Discuss with your team (or yourself) to determine how modular your docs should be.
+NOTE: Structuring content for reuse is easier to do from the start but don't feel like you have to structure _everything_ for reuse. Discuss with your team (or yourself) to determine how modular your docs should be.
 
 == Reviews 
 
@@ -110,20 +112,27 @@ Docs are best when they're collaborative. And the most fruitful collaboration of
 
 Reviews might look differently depending on personal preference and the software used. I've conducted reviews of plain text docs in GitHub as part of a Pull Request, as well as in exported Word docs uploaded to SharePoint with the Track Changes feature turned on.
 
-=== Subject Matter Expert (SME) review
-The tightest feedback loop should be between a SME and technical writer. Ask the SME how they'd prefer to handle reviews and accommodate accordingly. They're helping you out, after all! This review ensures technical accuracy, proper order of operations, and prerequisites. This review can be completed prior to or as part of a GitHub Pull Request.
+=== Subject matter expert (SME) review
+
+This review involves working with a SME to ensure technical accuracy, proper order of operations, and prerequisites, for example. Tight feedback loops between a tech writer and SME is ideal. As a courtesy, ask the SME how they'd prefer to handle reviews and accommodate accordingly. Some prefer a meeting while others only have time for emails or SharePoint files. Efficient use of a SME's time is crucial as experts are often called to many tasks.
+
+Complete SME reviews before requesting peer review.
 
 === Peer review
-Once the SME review is complete, other tech writers can evaluate the documentation for style guide adherence, proper information architecture, consistency in tone, grammar, and usage. This review should be completed as part of a GitHub Pull Request.
+
+Once the SME signs off on the docs, tech writers can review each other's work. Peer review considers style guide adherence, proper information architecture, consistency in tone, grammar, and usage. Always communicate feedback professionally and consider the author's feelings. This isn't a free pass for ruthless criticism. Complete this review as part of a GitHub Pull Request.
 
 === Feature review
-Once a feature is nearing **feature complete** status, a final review considering the opinion of key stakeholders (Product Management, Engineering, Professional Services, Support) should occur. This review will take into account higher-level feedback from a wider audience and serve as a jumping off point for training.
+
+Once a feature is nearing **feature complete** status, it should consider the opinion of other stakeholders (Product Management, Engineering, Professional Services, Support). This review takes into account higher-level feedback from a wider audience and serves as a jumping off point for training. You'll likely receive lots of out-of-scope feedback from this review, so create tickets in your backlog and plan accordingly. Not everything requested in this review can make the initial release.
 
 == Testability
 
+Tech writers don't just write the docs. They should test them too!
+
 === Linters
 
-Validating documentation doesn't need to be purely subjective. Language might not follow as strict of conventions as code, but I like to test my docs with Vale for style guide adherence and readability metrics. Style guide linting in Vale can be adjusted or extended to reflect your organization's preferences, as well. 
+Validating documentation doesn't need to be purely subjective. Tools like link:https://vale.sh[Vale,_target] deliver data around style guide adherence and readability. Vale lets you customize existing style guides and create your own rules to reflect your organization's preferences. It's a very powerful tool. 
 
 .Updates I've made to Vale in this project
 ====
@@ -132,7 +141,7 @@ Validating documentation doesn't need to be purely subjective. Language might no
 * added custom vocab list at `styles/Vocab/portfolio` with `accept.txt` file for spelling exceptions
 ====
 
-NOTE: Running the `vale sync` command will re-download any removed rules from your list of packages.
+NOTE: Running the `vale sync` command re-downloads any removed rules from your list of packages.
 
 === Acceptance criteria
 
@@ -146,9 +155,9 @@ Another test of documentation is to verify the writing against the ticket's acce
 [example]
 Documentation covering the following use-cases:
 * [task] fresh install workflow for new users
-* [task] upgrade workflow for existing users (US)
+* [task] upgrade workflow for existing users (USA)
 * [task] upgrade workflow for existing users (UK) 
 
 === Reviews
 
-xref:#_subject_matter_expert_sme_review[SME] and xref:#_peer_review[peer] reviews serve as the catch-all test for what escapes linters and acceptance criteria. This is the arena for "I think this paragraph is confusing" or "I would word this differently" type of feedback. We're humans after all, writing documentation for other humans, so it should pass these subjective criteria, too. Effective tech writers must develop the ability to synthesize murky (and sometimes conflicting) feedback into clear documentation.
+xref:#_subject_matter_expert_sme_review[SME] and xref:#_peer_review[peer] reviews serve as the catch-all test for what escapes linters and acceptance criteria. This is the arena for "I think this paragraph is confusing" or "I would word this differently" feedback. Tech writers are human after all, writing documentation for other humans, so docs should pass these subjective criteria, too. Effective tech writers must develop the ability to synthesize murky (and sometimes conflicting) feedback into clear docs.
