update AC example

--- a/modules/ROOT/pages/docs-as-code.adoc
+++ b/modules/ROOT/pages/docs-as-code.adoc
@@ -149,7 +149,7 @@ Another test of documentation is to verify the writing against the ticket's acce
 
 .Bad acceptance criteria
 [example]
-* "Document feature xyz"
+Document feature xyz
 
 .Good acceptance criteria
 [example]
