--- a/modules/ROOT/pages/agile.adoc
+++ b/modules/ROOT/pages/agile.adoc
@@ -1,8 +1,8 @@
 = Agile methodology
 
-I'm an Agile advocate with six years of experience running Scrum and Kanban frameworks. My preference between these approaches depends on the context. If I'm assigned to a specific dev team also running Scrum, I think Sprints for tech writing makes sense. In this context, I can follow one sprint behind development and stay aligned with changes by attending their stand-up and planning meetings. 
+I'm an Agile advocate with six years of experience running Scrum and Kanban frameworks. My preference between these approaches depends on the context. 
 
-If I'm stretched across multiple teams, I typically find Kanban most effective. Planning multiple sprints simply becomes too much of a task at that point. It's better to simplify the board and let deadlines determine documentation priorities.
+If I'm assigned to a specific dev team also running Scrum, I think Sprints for tech writing makes sense. In this context, I can follow one sprint behind development and stay aligned with changes by attending their stand-up and planning meetings. If I'm stretched across several teams, I typically find Kanban most effective. Planning simultaneous sprints becomes too much of a task at this point. It's better to simplify the board and let deadlines determine documentation priorities.
 
 Above all, I believe in team-created definitions and processes that measure out bite-size chunks of work with testable acceptance criteria. Who doesn't like moving tickets from left to right across the board?! &#128522;
 
@@ -15,16 +15,20 @@ Over the past six years I have experience participating in and leading typical A
 * Sprint Planning meetings
 * Retrospective meetings
 
+If I had to choose only one, I'd pick the daily stand-ups! These quick check-ins get the most done in a the shortest time.
+
 == Definition of done
 
-Establishing a definition of done is helpful to limit scope creep in tickets. Docs can always be improved, but this doesn't mean they're updated in one fell swoop. Creating a series of narrowly scoped tickets helps unclump work and makes collaboration easier. 
+Establishing a definition of done is helpful to limit scope creep in tickets. Docs can always improve, but this doesn't mean they're updated in one fell swoop. Creating a series of narrowly scoped tickets helps decouple efforts and makes collaboration easier. 
 
 I'm a fan of the link:https://gamestorming.com/circles-and-soup/[Circles and Soup activity,blank] to help writers agree on a definition of done. This game separates what tech writers _can_ control and influence from what is _out of their control_ from an organizational standpoint. Knowing the difference between these leads to achievable resolution times.
 
 == Document early and often
 
-When possible, I advocate that tech writers be involved earlier in the software development life cycle (SDLC) rather than later. How early you're involved depends on how "together" your Product Management team has it, I'll admit. Once a project has stable business rules, it's time to start documenting foundational concepts and high-level processes. Then, as the nitty-gritty particulars of a project are ironed out, adjusting course and reviewing changes is a more straight forward process.
+I'd rather involve docs earlier in the software development life cycle (SDLC) than later. The "document late" approach is generally dated, though there is such thing as documenting _too_ early. As a general rule, once a project has stable business rules, it's time to start documenting foundational concepts and high-level processes. Then, as development irons out the nitty-gritty details of a project, adjusting course and reviewing changes is a more straight forward process.
 
 == Tight feedback loops
 
-What I appreciate most about Agile is how it encourages efficient communication. 15-minute stand-ups are a good example. This type of efficiency is especially important to tech writers, who continually rely on SMEs for information and review. 
+What I appreciate most about Agile is how it encourages efficient communication. 15-minute team stand-ups and quick touch-points with SMEs are my favorite example. Tech writers are best when they use others time most effectively. 
+
+The importance of feedback loops also includes retrospectives.
