--- a/modules/ROOT/pages/agile.adoc
+++ b/modules/ROOT/pages/agile.adoc
@@ -21,11 +21,11 @@ If I had to choose only one, I'd pick the daily stand-ups! These quick check-ins
 
 Establishing a definition of done is helpful to limit scope creep in tickets. Docs can always improve, but this doesn't mean they're updated in one fell swoop. Creating a series of narrowly scoped tickets helps decouple efforts and makes collaboration easier. 
 
-I'm a fan of the link:https://gamestorming.com/circles-and-soup/[Circles and Soup activity^] to help writers agree on a definition of done. This game separates what tech writers _can_ control and influence from what is _out of their control_ from an organizational standpoint. Knowing the difference between these leads to achievable resolution times.
+I'm a fan of the link:https://gamestorming.com/circles-and-soup/[Circles and Soup activity^] to help writers agree on a definition of done. This game maps out what tech writers can control and influence as well as what is out of their control. Knowing the difference here leads to more predictable resolution times for tickets. 
 
 == Document early and often
 
-I'd rather involve docs earlier in the software development life cycle (SDLC) than later. The "document late" approach is generally dated, though there is such thing as documenting _too_ early. As a general rule, once a project has stable business rules, it's time to start documenting foundational concepts and high-level processes. Then, as development irons out the nitty-gritty details of a project, adjusting course and reviewing changes is a more straight forward process.
+I'd rather involve docs earlier in the software development life cycle (SDLC) than later. The "document late" approach is generally dated, though there is such thing as documenting too early. As a general rule, once a project has stable business rules, it's time to start documenting foundational concepts and high-level processes. Then, as development irons out the nitty-gritty details of a project, adjusting course and reviewing changes is a more straight forward process.
 
 == Tight feedback loops
 
