--- a/modules/ROOT/pages/docs-as-code.adoc
+++ b/modules/ROOT/pages/docs-as-code.adoc
@@ -4,6 +4,8 @@ Modern tech writing has evolved to treat documentation like code in how it's ver
 
 Fortunately, there's no need to reinvent the wheel. Treat the docs like code! 
 
+image::docs-as-code.jpeg[decorative image of Docs as Code process]
+
 == Git
 
 Whether working alone or on a team, proper version control is a must.
