add new agile img

--- a/modules/ROOT/pages/agile.adoc
+++ b/modules/ROOT/pages/agile.adoc
@@ -6,6 +6,8 @@ My preference between these approaches depends on the context. If I'm assigned t
 
 Above all, I believe in team-created definitions and processes that measure out bite-size chunks of work with testable acceptance criteria. Who doesn't like moving tickets from left to right across the board?! &#128522;
 
+image:agile-board.jpg[a decorative image showing different people moving tickets across a Kanban board]
+
 == Agile ceremonies
 
 Over the past six years I have experience participating in and leading typical Agile ceremonies:
